syntax = "proto3";

package rayexec.hybrid;

import "binder.proto";

message PlanRequest {
    bytes           bound_statement_json = 1;  // Bytes encoded using serde_json, at some point maybe that all becomes proto.
    binder.BindData bind_data            = 2;
}

message PlanResponse {
}

message ExecuteRequest {
}

message ExecuteResponse {
}
